@@ -798,6 +798,8 @@ shallow version of \tet{famat_mulpow} where $e$ is a small integer.
 
 \fun{GEN}{famat_inv_shallow}{GEN f} shallow version of \tet{famat_inv}.
 
+\fun{GEN}{famat_div_shallow}{GEN f, GEN g} return $f/g$; shallow.
+
 \fun{GEN}{famat_Z_gcd}{GEN M, GEN n} restrict the \var{famat} $M$ to
 the prime power dividing $n$.
 
