@@ -1,10 +1,16 @@
 Function: idealfactor
 Section: number_fields
-C-Name: idealfactor
-Prototype: GG
-Help: idealfactor(nf,x): factorization of the ideal x into prime ideals in the
- number field nf.
-Doc: factors into prime ideal powers the
- ideal $x$ in the number field $\var{nf}$. The output format is similar to the
- \kbd{factor} function, and the prime ideals are represented in the form
- output by the \kbd{idealprimedec} function.
+C-Name: gpidealfactor
+Prototype: GGDG
+Help: idealfactor(nf,x,{lim}): factorization of the ideal x into prime ideals
+ in the number field nf. If lim is set return partial factorization, using
+ primes < lim.
+Doc: factors into prime ideal powers the ideal $x$ in the number field
+ $\var{nf}$. The output format is similar to the \kbd{factor} function, and
+ the prime ideals are represented in the form output by the
+ \kbd{idealprimedec} function. If \var{lim} is set, return partial
+ factorization, including only prime ideals above rational primes
+ $< \var{lim}$.
+Variant: This function should only be used by the \kbd{gp} interface. Use
+ directly \fun{GEN}{idealfactor}{GEN x} or
+ \fun{GEN}{idealfactor_limit}{GEN x, ulong lim}.
