@@ -2194,6 +2194,7 @@ GEN     ZV_cba(GEN v);
 GEN     RM_round_maxrank(GEN G);
 GEN     ZM_famat_limit(GEN fa, GEN limit);
 GEN     famat_Z_gcd(GEN M, GEN n);
+GEN     famat_div_shallow(GEN f, GEN g);
 GEN     famat_inv(GEN f);
 GEN     famat_inv_shallow(GEN f);
 GEN     famat_makecoprime(GEN nf, GEN g, GEN e, GEN pr, GEN prk, GEN EX);
@@ -2211,6 +2212,7 @@ GEN     famat_to_nf_modideal_coprime(GEN nf, GEN g, GEN e, GEN id, GEN EX);
 GEN     famat_to_nf_moddivisor(GEN nf, GEN g, GEN e, GEN bid);
 GEN     famatsmall_reduce(GEN fa);
 GEN     gpidealval(GEN nf, GEN ix, GEN P);
+GEN     gpidealfactor(GEN nf, GEN x, GEN lim);
 GEN     idealHNF_Z_factor(GEN x, GEN *pvN, GEN *pvZ);
 GEN     idealtwoelt(GEN nf, GEN ix);
 GEN     idealtwoelt0(GEN nf, GEN ix, GEN a);
@@ -4378,6 +4380,8 @@ GEN     Q_muli_to_int(GEN x, GEN d);
 GEN     Q_primitive_part(GEN x, GEN *ptc);
 GEN     Q_primpart(GEN x);
 GEN     Q_remove_denom(GEN x, GEN *ptd);
+GEN     Q_factor(GEN x);
+GEN     Q_factor_limit(GEN x, ulong lim);
 long    Rg_type(GEN x, GEN *ptp, GEN *ptpol, long *ptpa);
 long    RgM_RgC_type(GEN x, GEN y, GEN *p, GEN *pol, long *pa);
 GEN     RgM_rescale_to_int(GEN x);
