@@ -183,6 +183,27 @@
 , [63146078120386376378131819642, -1; 1, 63146078120386376378131819641]] -1]
 
 
+[ [13, [-3, 1]~, 1, 1, [4, -1; 1, 3]] 2]
+
+[[13, [4, 1]~, 1, 1, [-3, -1; 1, -4]] 2]
+
+
+[  [3, [-1, 1]~, 2, 1, [-1, -1; 1, -2]] 1]
+
+[[37, [-10, 1]~, 1, 1, [11, -1; 1, 10]] 1]
+
+[;]
+
+[[37, [-10, 1]~, 1, 1, [11, -1; 1, 10]] 1]
+
+
+[       [3, [-1, 1]~, 2, 1, [-1, -1; 1, -2]] 1]
+
+[     [37, [-10, 1]~, 1, 1, [11, -1; 1, 10]] 1]
+
+[[1093, [-151, 1]~, 1, 1, [152, -1; 1, 151]] 1]
+
+
 [67452192952521724999 19368419142280277485321497629511555041951889852345/762
 234946175168528650011228121]
 
@@ -229,4 +250,4 @@
 [-1/18, -1/9, 0, 0, 0, 0]~
 1
 [0, -2, 2, 1, -1, 0]~
-Total time spent: 118
+Total time spent: 132
